<resources>
    <!--Nome do app-->
    <string name="app_name">Conecta</string>
    <string name="try_again">Tentar novamente</string>

    <!--Strings de Activities-->

        <string name="nome_hint">Nome</string>
        <string name="prontuario_hint">Prontuário</string>
        <string name="senha_hint">Senha</string>
        <string name="preencher_campos">Este campo deve ser preenchido!</string>
        <string name="campo_invalido">Digite um prontuário válido!</string>

        <!--LoginActivity-->
            <string name="login_btn_text">Login</string>
            <string name="cadastro_text">Ainda não possui cadastro?</string>
            <string name="login_fail">Não foi possível fazer login</string>
        <!--Fim LoginActivity-->

        <!--RegisterActivity-->
            <string name="email_hint">Email</string>
            <string name="cadastrar_btn_text">Cadastrar</string>
            <string name="cadastro_realizado">Cadastro realizado com sucesso!</string>
            <string name="positive_button">Ir para tela de login</string>
            <string name="register_fail">Não foi possível efetuar o cadastro</string>
        <!--Fim RegisterActivity-->

        <!--UserActivity-->
            <string name="answer_group_title">Minhas interações</string>
            <string name="action_home">Início</string>
            <string name="action_make_question">Fazer pergunta</string>
            <string name="action_my_questions">Minhas perguntas</string>
            <string name="action_my_answers">Minhas respostas</string>
            <string name="action_my_profile">Meu perfil</string>
            <string name="action_settings">Configurações do aplicativo</string>
            <string name="action_logout">Sair</string>
        <!--Fim UserActivity-->

        <!--QuestionActivity-->
            <string name="action_reply">Responder</string>
            <string name="action_flag">Denunciar</string>
            <string name="no_answers">Nenhuma resposta para essa pergunta</string>
            <string name="answer_hint">Adicionar resposta</string>
            <string name="said">respondeu:</string>
            <string name="sending_resp">Enviando resposta...</string>
        <!--Fim QuestionActivity-->

    <!--Fim das Strings de Activities-->

    <!--Strings de Fragments-->

    <string name="questions_error">Erro ao procurar perguntas</string>
    <string name="no_questions">Nenhuma pergunta encontrada</string>
    <string name="make_question_title">Fazer pergunta</string>
    <string name="my_profile_title">Meu perfil</string>
    <string name="home_title">Início</string>

    <!--MakeQuestionFragment-->
    <string name="sending_question">Enviando pergunta...</string>
    <string name="snackbar_message_ok">Pergunta enviada com sucesso</string>
    <string name="snackbar_message_error">Erro ao enviar pergunta</string>
    <string name="title_hint">Título</string>
    <string name="string_pergunta">Pergunta</string>
    <!--Fim MakeQuestionFragment-->

    <!--UserInfoFragment--><!--Fim UserInfoFragment-->

    <!--MyQuestionsFragment-->

    <!--MyQuestionsFragment-->

    <!--Fim das Strings de Fragments-->

    <!--Dialogs-->
    <string name="loading">Carregando...</string>
    <string name="title_change_info">Alterar informação</string>
    <string name="title_activity_user">UserActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Fim dialogs-->

</resources>
