<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/action_home" />
        <item
            android:id="@+id/nav_make_question"
            android:title="@string/action_make_question" />

        <item
            android:id="@+id/nav_my_profile"
            android:title="@string/action_my_profile" />

        <item android:title="@string/answer_group_title">
            <menu>
                <group android:checkableBehavior="single">

                    <item
                        android:id="@+id/nav_my_questions"
                        android:title="@string/action_my_questions" />
                    <item
                        android:id="@+id/nav_my_answers"
                        android:title="@string/action_my_answers" />

                </group>
            </menu>
        </item>

        <item android:title="Configurações">

            <menu>

                <group android:checkableBehavior="single">

                    <item
                        android:id="@+id/nav_settings"
                        android:title="@string/action_settings" />

                </group>

            </menu>

        </item>
    </group>

    <item
        android:id="@+id/nav_logout"
        android:title="@string/action_logout" />

</menu>
