<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_login_root"
    android:background="@color/colorPrimary"
    tools:context=".activity.LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_logo"
                android:src="@drawable/logo"
                android:layout_gravity="center_horizontal" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:singleLine="true"
                    android:textColorHint="@color/colorTextIcons"
                    android:textColor="@color/colorTextIcons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_text_pront"
                    android:hint="@string/prontuario_hint"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:singleLine="true"
                    android:textColor="@color/colorTextIcons"
                    android:textColorHint="@color/colorTextIcons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_text_senha"
                    android:hint="@string/senha_hint"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:textSize="16sp"
                android:background="@color/colorAccent"
                android:textColor="@color/primaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_btn_text"
                android:layout_marginTop="40dp"
                android:id="@+id/btn_login"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:background="@null"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastro_text"
                android:id="@+id/text_cadastrar"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp" />

        </LinearLayout>

    </ScrollView>


</FrameLayout>
