<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_register_root"
    android:background="@color/colorPrimary"
    tools:context=".activity.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <ImageView
                android:src="@drawable/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:hint="@string/nome_hint"
                    android:textColorHint="@color/colorTextIcons"
                    android:inputType="textCapWords"
                    android:id="@+id/edit_text_nome"
                    android:singleLine="true"
                    android:textColor="@color/colorTextIcons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:hint="@string/prontuario_hint"
                    android:textColorHint="@color/colorTextIcons"
                    android:id="@+id/edit_text_prontuario"
                    android:singleLine="true"
                    android:textColor="@color/colorTextIcons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:hint="@string/email_hint"
                    android:textColorHint="@color/colorTextIcons"
                    android:id="@+id/edit_text_email"
                    android:textColor="@color/colorTextIcons"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:hint="@string/senha_hint"
                    android:textColorHint="@color/colorTextIcons"
                    android:id="@+id/edit_text_password"
                    android:textColor="@color/colorTextIcons"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cadastrar_btn_text"
                android:id="@+id/btn_cadastrar"
                android:background="@color/colorAccent"
                android:textColor="@color/primaryText"
                android:layout_marginTop="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>